fix: improve readability for probe text

--- a/src/ng-webview/src/app/component/probe/probe.component.css
+++ b/src/ng-webview/src/app/component/probe/probe.component.css
@@ -33,6 +33,7 @@
 
 .text {
   padding-top: 0.85em;
+  color: black;
 }
 
 #probe_container:hover {
